--- a/package.json
+++ b/package.json
@@ -32,11 +32,15 @@
     "@types/jest": "^24.9.0",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.3",
+    "@types/redux": "^3.6.0",
     "jest": "^24.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "dev": "webpack-dev-server --mode development --open --hot",
